--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "commerce-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
